--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"turndown": "^5.0.1",
 		"typeorm": "^0.2.11",
 		"winston": "^3.1.0",
-		"winston-daily-rotate-file": "^3.5.1"
+		"winston-daily-rotate-file": "^3.5.1",
+		"tslint": "^5.12.0"
 	},
 	"devDependencies": {
 		"@types/common-tags": "^1.8.0",
