--- a/package.json
+++ b/package.json
@@ -31,7 +31,20 @@
 		"typeorm": "^0.2.11",
 		"winston": "^3.1.0",
 		"winston-daily-rotate-file": "^3.5.1",
-		"tslint": "^5.12.0"
+		"@types/common-tags": "^1.8.0",
+		"@types/moment-duration-format": "^2.2.2",
+		"@types/node": "^10.12.18",
+		"@types/node-emoji": "^1.8.0",
+		"@types/node-fetch": "^2.1.4",
+		"@types/ws": "^6.0.1",
+		"fs-nextra": "^0.3.8",
+		"gulp": "^4.0.0",
+		"gulp-sourcemaps": "^2.6.4",
+		"gulp-typescript": "^5.0.0",
+		"merge2": "^1.2.3",
+		"tslint": "^5.12.0",
+		"tslint-config-fire": "^1.0.1",
+		"typescript": "^3.2.2"
 	},
 	"devDependencies": {
 		"@types/common-tags": "^1.8.0",
