--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
 		"merge2": "^1.2.3",
 		"tslint": "^5.12.0",
 		"tslint-config-fire": "^1.0.1",
-		"typescript": "^3.2.2"
+		"typescript": "^3.2.2",
+		"ts-node": "^7.0.1"
 	},
 	"devDependencies": {
 		"@types/common-tags": "^1.8.0",
