--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,10 @@
 		"emitDecoratorMetadata": true,
 		"alwaysStrict": true,
 		"allowSyntheticDefaultImports": true,
-		"pretty": true
+		"pretty": true,
+		"types": []
 	},
 	"include": [
 		"./src"
-	]
+	],
 }
